Backend: Finalization of the voting - delegation relationship / Various fixes